--- a/controlpanel/web/static/login.html
+++ b/controlpanel/web/static/login.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Diablo Strike Control Panel</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/login.css">
     </head>
     <body>
@@ -22,6 +23,32 @@
                 </button>
         </form>
        </div>
+       <!-- <footer>
        
+    </footer> -->
+
+        <span class="position-absolute bottom-0 mb-3 ms-5">
+            <strong>DISCLAIMER (scroll down)</strong>
+            <i class="bi bi-arrow-down-circle-fill"></i>
+        </span>
+        <div class="w-100 position-absolute top-100 px-5">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-top">
+                <div>
+                    <p>
+                        This website and the associated Discord bot, <i>Diablo Strike</i>, are fan-made projects created by me. The content, including the name, design, and inspiration, is derived from a specific video game ability (OGM-72 'DIABLO' Strike) associated with a character (Captain) from Risk of Rain 2. This project is purely for personal enjoyment and is not intended for any commercial use.
+                    </p>
+                    <p>
+                        <strong>Acknowledgment of Intellectual Property:</strong> <i>Diablo Strike Control Panel</i> acknowledges and respects the intellectual property rights of the creators and owners of Risk of Rain 2. All copyrights, trademarks, and other intellectual property pertaining to the game are the property of their respective owners, including: Hopoo Games and Gearbox.
+                    </p>
+                    <p>
+                        <strong>Cooperation with Rights Owners:</strong> <i>Diablo Strike Control Panel</i> is committed to cooperating with the rights owners of Risk of Rain 2. If the creators or owners of the game believe that this project infringes upon their intellectual property rights, please contact <a href="mailto:r.ivankos21@gmail.com">r.ivankos21@gmail.com</a> for prompt resolution. <i>Diablo Strike Control Panel</i> is open to discussions and will take appropriate action, including the removal of the website and associated services if required by the rights owners.
+                    </p>
+                    <p>
+                        <strong>Note:</strong> This project is not affiliated with, endorsed by, or sponsored by the creators or owners of Risk of Rain 2. It is an independent, non-profit project created for personal use.
+                    </p>
+                </div>
+            </footer>
+        </div>
+
     </body>
 </html>
